fix spacing between labels and inputs; make checkbox mini size

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -6,6 +6,34 @@ body{
 
 }
 
+/* Custom Dialog Alignment */
+div.ui-header.ui-bar-inherit a.ui-icon-delete {
+  margin: 0px;
+}
+
+div form div, div.ui-dialog-contain a.ui-btn {
+  /*width: 50px !important*/
+  margin-left: 1.1em;
+  margin-right: 1.1em;
+}
+
+div.ui-dialog-contain {
+  padding-bottom: 1.1em;
+}
+/* Custom Dialog Alignment */
+
+/* Override Custom Dialog Alignment for Submit and Reset Buttons */
+div.row#buttonsLine {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+div.actions.saveline {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+/* Override Custom Dialog Alignment for Submit and Reset Buttons */
+
 .fixed_fullwidth_footer {
   /*TODO: Determine proper way to override .ui-footer */
   /*position: fixed; */
